# ros-khepera

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/base_controller/: base_controller
devel/lib/dead_reckoning/: dead_reckoning
devel/lib/gamepad_joy_cmd/: gamepad_robot_node
devel/lib/odometry_node/: odometry_node
devel/lib/pkgconfig/: base_controller.pc  dead_reckoning.pc  gamepad_joy_cmd.pc  odometry_node.pc  sensor_node.pc  simple_navigation_goals.pc  speed_controller.pc  speed_keyboard.pc  speed_path_controller.pc  speed_recorder.pc  speed_sensor.pc  ultrasound_node.pc  unity_simulation_scene.pc
devel/lib/sensor_node/: sensor_node
devel/lib/simple_navigation_goals/: simple_navigation_goals
devel/lib/speed_controller/: speed_controller
devel/lib/speed_keyboard/: joystick_to_joy_node  keyboard_to_twist_node  twist_to_joy_node
devel/lib/speed_path_controller/: speed_path_controller
devel/lib/speed_recorder/: speed_recorder
devel/lib/speed_sensor/: speed_sensor
devel/lib/ultrasound_node/: ultrasound_node
devel/share/base_controller/cmake/: base_controllerConfig.cmake
devel/share/dead_reckoning/cmake/: dead_reckoningConfig.cmake
devel/share/gamepad_joy_cmd/cmake/: gamepad_joy_cmdConfig.cmake
devel/share/odometry_node/cmake/: odometry_nodeConfig.cmake
devel/share/sensor_node/cmake/: sensor_nodeConfig.cmake
devel/share/simple_navigation_goals/cmake/: simple_navigation_goalsConfig.cmake
devel/share/speed_controller/cmake/: speed_controllerConfig.cmake
devel/share/speed_keyboard/cmake/: speed_keyboardConfig.cmake
devel/share/speed_path_controller/cmake/: speed_path_controllerConfig.cmake
devel/share/speed_recorder/cmake/: speed_recorderConfig.cmake
devel/share/speed_sensor/cmake/: speed_sensorConfig.cmake
devel/share/ultrasound_node/cmake/: ultrasound_nodeConfig.cmake
devel/share/unity_simulation_scene/cmake/: unity_simulation_sceneConfig.cmake
src/.metadata/: version.ini
src/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
src/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
src/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
src/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
src/base_controller/: CMakeLists.txt
src/base_controller/map/: gimnasio.pgm
src/base_controller/src/: base_controller.cpp
src/dead_reckoning/: CMakeLists.txt  package.xml
src/dead_reckoning/src/: dead_reckoning.cpp
src/gamepad_joy_cmd/: CMakeLists.txt  package.xml
src/gamepad_joy_cmd/src/: gamepad_joy_cmd.cpp
src/launch/: speed_launcher.launch  speed_launcher_master.launch  speed_launcher_slave.launch
src/navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/navigation/launch/: navigation.launch  test.launch
src/odometry_node/: CMakeLists.txt
src/odometry_node/src/: odometry_node.cpp
src/sensor_node/: CMakeLists.txt  package.xml
src/sensor_node/src/: sensor_node.cpp
src/simple_navigation_goals/: CMakeLists.txt  package.xml
src/speed_controller/: CMakeLists.txt
src/speed_controller/map/: gimnasio2.pgm  mapa.pgm  mapa.xcf  mapa.yaml  mapa2.xcf
src/speed_controller/src/: speed_controller.cpp
src/speed_keyboard/: CMakeLists.txt  package.xml
src/speed_keyboard/src/: joystick_to_joy.cpp  keyboard_to_twist.cpp  twist_to_joy.cpp
src/speed_path_controller/: CMakeLists.txt
src/speed_path_controller/src/: speed_path_controller.cpp
src/speed_recorder/: CMakeLists.txt  package.xml
src/speed_recorder/src/: speed_recorder.cpp
src/speed_sensor/: CMakeLists.txt
src/speed_sensor/src/: speed_sensor.cpp
src/ultrasound_node/: CMakeLists.txt  package.xml
src/ultrasound_node/src/: ultrasound_node.cpp
(+11 files in other folders)
